@@ -9,6 +9,7 @@ WriteMakefile
      { Test::More    => 0.47
      , Scalar::Util  => 1.13
      , Math::Trig    => 0
+     , Log::Report   => 0
      }
   , AUTHOR      => 'Mark Overmeer <markov@cpan.org>'
   , ABSTRACT    => 'basic polygon calculations'
